--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "61393954-I453-4531-945e-35b6d0444494"
+        "projectId": "49f6ef4e-7acd-4022-a0a5-1c5b30a28d23"
       },
       "API_BASE_URL": "https://ca3549b3-8fd1-445c-86af-8a5ee49eecb1-00-2crz6zepusv09.janeway.replit.dev"
     }
