--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,6 +7,7 @@ workflows:
       groups:
         - expo_credentials
         - mobile_env
+        - expo_project_id
       node: "18"
 
     scripts:
@@ -19,17 +20,16 @@ workflows:
         script: |
           npx expo prebuild --clean --no-install
 
-      - name: Debug EXPO_TOKEN
-        script: |
-          echo "EXPO_TOKEN length: $(echo -n $EXPO_TOKEN | wc -c)"
-
       - name: EAS build for iOS
         script: |
-          eas build -p ios --profile production
+          eas build \
+            -p ios \
+            --profile production \
+            --non-interactive \
+            --project-id "$EXPO_PROJECT_ID"
 
     artifacts:
       - $HOME/build/ios/*.ipa
-
 
 
 
