--- a/app.json
+++ b/app.json
@@ -13,14 +13,14 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.threesixsixdegreefitechandsciinstitute.oneagent"
+      "bundleIdentifier": "com.threesixsixdegreefitechandsciinstitute.one"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.threesixsixdegreefitechandsciinstitute.oneagent"
+      "package": "com.threesixsixdegreefitechandsciinstitute.one"
     },
     "web": {
       "favicon": "./assets/favicon.png"
