--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,16 +5,15 @@ workflows:
 
     environment:
       groups:
-        - expo_credentials    # exposes $EAS_TOKEN
-        - expo_project_id     # exposes $EXPO_PROJECT_ID (for expo prebuild)
-        - mobile_env
+        - "expo_credentials"    # exposes $EAS_TOKEN
+        - "expo_project_id"     # exposes $EXPO_PROJECT_ID
+        - "mobile_env"          # any other custom vars
 
       ios_signing:
-        # fetch the exact P12 and provisioning profile you uploaded
         certificates:
-          - reference: one-mobile-native
+          - reference: "one-mobile-native"
         provisioning_profiles:
-          - reference: one-mobile-native
+          - reference: "one-mobile-native"
 
     scripts:
       - name: Install dependencies
@@ -24,28 +23,21 @@ workflows:
 
       - name: Expo prebuild
         script: |
-          # will use the expo.projectId from app.json["extra"]["eas"]
           npx expo prebuild --clean --no-install
-
-      - name: Set up code signing in Xcode project
-        script: |
-          # this reads your fetched profiles + certs and updates the generated Xcode project
-          xcode-project use-profiles
 
       - name: Debug EAS_TOKEN
         script: |
-          echo "EAS_TOKEN length: $(echo -n $EAS_TOKEN | wc -c)"
+          echo "EAS_TOKEN length: $(echo -n "$EAS_TOKEN" | wc -c)"
 
       - name: EAS build for iOS
         script: |
-          # CI-auth will pick up the $EAS_TOKEN automatically
           eas build \
             --platform ios \
             --profile production \
             --non-interactive
 
     artifacts:
-      - $HOME/build/ios/*.ipa
+      - "$HOME/build/ios/*.ipa"
 
 
 
